Deployed Build: Added loading spinner

--- a/src/App.css
+++ b/src/App.css
@@ -170,4 +170,10 @@ hr {
   align: left;
 }
 
-
+  .centered {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -50px;
+  }
