--- a/src/App.css
+++ b/src/App.css
@@ -132,6 +132,7 @@ header .s_container #branding h1{
 }
 .left_column{
   padding-top: 40px;
+  border-left: 2px solid black;
   background: white;
   text-align: center;
   vertical-align: middle;
@@ -175,5 +176,14 @@ hr {
     top: 50%;
     left: 50%;
     margin-top: -50px;
+    margin-left: -50px;
+  }
+
+  .centered-text{
+    font-size: 20px;
+    position: fixed;
+    top: 50%;
+    left: 48.5%;
+    margin-top: -85px;
     margin-left: -50px;
   }
